--- a/flaskr/templates/auth/login.html
+++ b/flaskr/templates/auth/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-<h1> {% block title %} Register {% endblock  %} </h1>
+<h1> {% block title %} Log In {% endblock  %} </h1>
 {% endblock %}
 
 
@@ -11,6 +11,6 @@
     <input id="username" name="username" required>
     <label for="password">Password</label>
     <input id="password" name="password" type="password" required>
-    <input type="submit" value="Register">
+    <input type="submit" value="Log In">
 </form>
 {% endblock  %}
