--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for("static", filename="style.css") }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <title>{% block title %}{% endblock %} - Flaskr</title>
 </head>
 <body>
@@ -12,15 +12,15 @@
         <h1>Flaskr</h1>
         <ul>
             {% if g.user %}
-                <li> {{ g.user["username"] }} </li>
-                <li> <a href="{{url_for("auth.logout")}}"> Log out </a> </li>
+                <li> <span>{{ g.user["username"] }}</span> </li>
+                <li> <a href="{{url_for('auth.logout')}}"> Log out </a> </li>
             {% else %}
-                <li> <a href="{{url_for("auth.register")}}"> Register </a> </li>
-                <li> <a href="{{url_for("auth.login")}}"> Log in </a> </li>
+                <li> <a href="{{url_for('auth.register')}}"> Register </a> </li>
+                <li> <a href="{{url_for('auth.login')}}"> Log in </a> </li>
             {% endif %}
         </ul>
     </nav>
-    <section>
+    <section class="content">
         <header>
             {% block header %}{% endblock %}
         </header>
