--- a/flaskr/templates/blog/create.html
+++ b/flaskr/templates/blog/create.html
@@ -8,9 +8,9 @@
 {% block content %}
     <form method="post">
         <label for="title">Title</label>
-        <input type="text" name="title" id="title">
+        <input type="text" name="title" id="title" value="{{ request.form['title'] }}">
         <label for="body">Body</label>
-        <textarea name="body" id="body" cols="30" rows="10"></textarea>
+        <textarea name="body" id="body" cols="30" rows="10">{{ request.form["body"] }}</textarea>
         <input type="submit" value="Save">
     </form>
 {% endblock %}
